--- a/index.html
+++ b/index.html
@@ -8,8 +8,35 @@
     <link rel="stylesheet" href="Assets/CSS/custom.css">
     <title>Главная</title>
 </head>
-<body>
-    <header></header>
+<body class="bg-white">
+    <header class="container mx-auto p-2 flex justify-between items-center mt-4">
+        <div>
+            <img src="Assets/Images/header/logo.svg" alt="" class="w-48">
+        </div>
+        <div class="flex justify-around items-center font-semibold text-text hidden lg:flex">
+            <a href="" class="mx-6 text-orange-500">Home</a>
+            <a href="" class="mx-6">Properties </a>
+            <a href="" class="mx-6">About us</a>
+            <a href="" class="mx-6">Blog</a>
+            <button class="mx-6 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-7 py-4">Contact us</button>
+        </div>
+        <button class="flex bg-white rounded-xl items-center border-2 border-white px-3 lg:hidden group" id="toggler">
+            <p class="my-0.5 h-8 w-8 bg-black rounded-full mr-2 group-hover:delay-200 transition-all duration-500 group-hover:bg-white"></p>
+            <p class="font-bold">Menu</p>
+        </button>
+    </header>
+
+    <div class="w-full flex">
+        <div id="mobile__nav" class="bg-white fixed top-0 right-0 flex flex-col h-screen w-full md:w-1/2 pt-12 transform translate-x-full transition duration-300 ease-in-out z-30">
+            <svg id="toggler__expanded" class="text-text w-6 h-6 top-4 left-4 cursor-pointer ml-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+            </svg>
+            <div class="flex flex-col h-full mt-4">
+                
+            </div>
+        </div>
+        <div class="w-full h-screen fixed top-0 right-0 hidden z-10 bg-gray-900 opacity-70" id="overlay"></div>
+    </div>
 
     <footer></footer>
     
