--- a/index.html
+++ b/index.html
@@ -18,24 +18,73 @@
             <a href="" class="mx-6">Properties </a>
             <a href="" class="mx-6">About us</a>
             <a href="" class="mx-6">Blog</a>
-            <button class="mx-6 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-7 py-4">Contact us</button>
+            <button class="ml-6 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-7 py-4">Contact us</button>
         </div>
         <button class="flex bg-white rounded-xl items-center border-2 border-white px-3 lg:hidden group" id="toggler">
-            <p class="my-0.5 h-8 w-8 bg-black rounded-full mr-2 group-hover:delay-200 transition-all duration-500 group-hover:bg-white"></p>
-            <p class="font-bold">Menu</p>
+            <img src="Assets/Images/header/btn.png" alt="" class="w-8 h-8">
         </button>
     </header>
-
     <div class="w-full flex">
         <div id="mobile__nav" class="bg-white fixed top-0 right-0 flex flex-col h-screen w-full md:w-1/2 pt-12 transform translate-x-full transition duration-300 ease-in-out z-30">
             <svg id="toggler__expanded" class="text-text w-6 h-6 top-4 left-4 cursor-pointer ml-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
             </svg>
-            <div class="flex flex-col h-full mt-4">
-                
+            <div class="flex flex-col h-full mt-4 p-4">
+                <a href="" class="my-4 text-orange-500">Home</a>
+                <a href="" class="my-4">Properties </a>
+                <a href="" class="my-4">About us</a>
+                <a href="" class="my-4">Blog</a>
+                <button class="my-4 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-4 py-2">Contact us</button>
             </div>
         </div>
         <div class="w-full h-screen fixed top-0 right-0 hidden z-10 bg-gray-900 opacity-70" id="overlay"></div>
+    </div>
+
+    <div class="container mx-auto p-2 flex flex-col md:flex-row">
+        <div class="w-full lg:w-7/12 flex flex-col justify-center md:items-center xl:items-start">
+            <p class="font-semibold text-3xl md:text-4xl lg:text-6xl md:w-8/12">Find the perfect place to stay with your family</p>
+            <p class="font-medium mt-3 md:mt-7 md:w-8/12">Buying a home is a life-changing experience, so shouldn’t your real estate agent be a life changer.</p>
+            <div class="mt-4 md:mt-10 md:w-8/12">                
+                <div class="w-fit tab-shadow">
+                    <ul class="flex flex-wrap -mb-px text-sm font-medium text-center text-text" id="tabExample" role="tablist">
+                        <li class="pr-2 bg-white" role="presentation">
+                            <button class="inline-block p-4 hover:delay-200 transition-all duration-500" id="buy-tab-example" type="button" role="tab" aria-controls="buy-example" aria-selected="false">Buy</button>
+                        </li>
+                        <li class="pr-2 bg-white" role="presentation">
+                            <button class="inline-block p-4 hover:delay-200 transition-all duration-500" id="rent-tab-example" type="button" role="tab" aria-controls="rent-example" aria-selected="false">Rent</button>
+                        </li>
+                        <li class="pr-2 bg-white" role="presentation">
+                            <button class="inline-block p-4 hover:delay-200 transition-all duration-500" id="sell-tab-example" type="button" role="tab" aria-controls="sell-example" aria-selected="false">Sell</button>
+                        </li>
+                    </ul>
+                </div>
+                <div id="tabContentExample" class="tab-shadow">
+                    <div class="hidden p-4 bg-white rounded-lg" id="buy-example" role="tabpanel" aria-labelledby="buy-tab-example">
+                        <p>Тест 1</p>
+                    </div>
+                    <div class="hidden p-4 bg-white rounded-lg" id="rent-example" role="tabpanel" aria-labelledby="rent-tab-example">
+                        <p>Тест 2</p>
+                    </div>
+                    <div class="hidden p-4 bg-white rounded-lg" id="sell-example" role="tabpanel" aria-labelledby="sell-tab-example">
+                        <p>Тест 3</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="w-full lg:w-5/12 p-2 md:p-4 lg:p-0">
+            <img src="Assets/Images/find/bg.svg" alt="" class="w-full">
+        </div>
+    </div>
+
+    <div class="container mx-auto p-2 mt-12 md:mt-24 flex flex-col justify-center items-center">
+        <p class="font-semibold text-4xl text-text before:content-[url('Assets/Images/headings/house.svg')] before:absolute before:bottom-0 before:-left-2 text-center relative w-fit">Our Partners</p>
+        <div class="flex flex-col lg:flex-row mt-6 md:mt-16 justify-center items-center">
+            <img src="Assets/Images/partners/1.svg" alt="" class="my-6 lg:mx-12">
+            <img src="Assets/Images/partners/2.svg" alt="" class="my-6 lg:mx-12">
+            <img src="Assets/Images/partners/3.svg" alt="" class="my-6 lg:mx-12">
+            <img src="Assets/Images/partners/4.svg" alt="" class="my-6 lg:mx-12">
+            <img src="Assets/Images/partners/5.svg" alt="" class="my-6 lg:mx-12">            
+        </div>
     </div>
 
     <footer></footer>
@@ -43,5 +92,6 @@
     <script src="https://unpkg.com/flowbite@1.5.4/dist/flowbite.js"></script>
     <script src="Assets/JS/tailwind.config.js"></script>
     <script src="Assets/JS/custom.js"></script>
+    <script src="Assets/JS/tabs.js"></script>
 </body>
 </html>
