--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <a href="" class="mx-6">Properties </a>
             <a href="" class="mx-6">About us</a>
             <a href="" class="mx-6">Blog</a>
-            <button class="ml-6 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-7 py-4">Contact us</button>
+            <button class="ml-6 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-7 py-4 hover:delay-200 transition-all duration-500 hover:bg-transparent hover:text-blue-500">Contact us</button>
         </div>
-        <button class="flex bg-white rounded-xl items-center border-2 border-white px-3 lg:hidden group" id="toggler">
+        <button class="flex bg-white rounded-xl items-center border-2 border-white px-3 lg:hidden" id="toggler">
             <img src="Assets/Images/header/btn.png" alt="" class="w-8 h-8">
         </button>
     </header>
@@ -87,6 +87,164 @@
         </div>
     </div>
 
+    <div class="container mx-auto p-2 md:mt-32">
+        <div class="flex justify-between">
+            <p class="font-semibold text-4xl text-text before:content-[url('Assets/Images/headings/house.svg')] before:absolute before:bottom-0 before:-left-2 relative w-fit">Popular Properties</p>
+            <button class="text-orange-500 font-semibold">VIEW ALL</button>
+        </div>
+        <div class="mt-8 md:mt-16 grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+            <div class="rounded-xl bg-white shadow-2xl overflow-hidden">
+                <img src="Assets/Images/properties/1.svg" alt="" class="w-full rounded-t-xl hover:delay-200 transition-all duration-500 hover:scale-110">
+                <div class="p-4">
+                    <div class="flex justify-between items-center mt-6">
+                         <p class="font-semibold text-2xl">Capital hill residence</p>
+                         <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="fill-red-500" d="M8 14C7.88969 14 7.77981 13.9617 7.69147 13.8847C7.00941 13.2909 6.36075 12.7404 5.75056 12.2227C2.30678 9.30098 0 7.3705 0 4.55821C0 1.95963 1.84491 0 4.25 0C6.14559 0 7.36234 1.31843 8 2.5056C8.63766 1.31843 9.85441 0 11.75 0C14.1551 0 16 1.95963 16 4.55821C16 7.37053 13.6932 9.30098 10.2494 12.2227C9.63925 12.7404 8.99059 13.2909 8.30853 13.8847C8.22019 13.9617 8.11031 14 8 14Z"/>
+                        </svg>                                                      
+                    </div>
+                    <div class="flex mt-2">
+                        <img src="Assets/Images/properties/geo.svg" alt="">
+                        <p class="text-text font-normal mx-2 text-lg">East London</p>
+                    </div>
+                    <div class="flex mt-4">
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/bed.svg')]">6</p>
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/eat.svg')]">2</p>
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/shower.svg')]">3</p>
+                    </div>
+                    <div class="flex justify-between mt-4 items-center">
+                        <p class="text-2xl text-orange-500 font-semibold">$<span>5527.00</span></p>
+                        <button class="my-4 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-4 py-2 hover:delay-200 transition-all duration-500 hover:bg-transparent hover:text-blue-500 font-medium text-lg">View Details</button>
+                    </div>
+                </div>
+            </div>
+            <div class="rounded-xl bg-white shadow-2xl overflow-hidden">
+                <img src="Assets/Images/properties/2.svg" alt="" class="w-full rounded-t-xl hover:delay-200 transition-all duration-500 hover:scale-110">
+                <div class="p-4">
+                    <div class="flex justify-between items-center mt-6">
+                         <p class="font-semibold text-2xl">Capital hill residence</p>
+                         <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="fill-red-500" d="M8 14C7.88969 14 7.77981 13.9617 7.69147 13.8847C7.00941 13.2909 6.36075 12.7404 5.75056 12.2227C2.30678 9.30098 0 7.3705 0 4.55821C0 1.95963 1.84491 0 4.25 0C6.14559 0 7.36234 1.31843 8 2.5056C8.63766 1.31843 9.85441 0 11.75 0C14.1551 0 16 1.95963 16 4.55821C16 7.37053 13.6932 9.30098 10.2494 12.2227C9.63925 12.7404 8.99059 13.2909 8.30853 13.8847C8.22019 13.9617 8.11031 14 8 14Z"/>
+                        </svg>                                                      
+                    </div>
+                    <div class="flex mt-2">
+                        <img src="Assets/Images/properties/geo.svg" alt="">
+                        <p class="text-text font-normal mx-2 text-lg">East London</p>
+                    </div>
+                    <div class="flex mt-4">
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/bed.svg')]">6</p>
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/eat.svg')]">2</p>
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/shower.svg')]">3</p>
+                    </div>
+                    <div class="flex justify-between mt-4 items-center">
+                        <p class="text-2xl text-orange-500 font-semibold">$<span>6727.00</span></p>
+                        <button class="my-4 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-4 py-2 hover:delay-200 transition-all duration-500 hover:bg-transparent hover:text-blue-500 font-medium text-lg">View Details</button>
+                    </div>
+                </div>
+            </div>
+            <div class="rounded-xl bg-white shadow-2xl overflow-hidden">
+                <img src="Assets/Images/properties/3.svg" alt="" class="w-full rounded-t-xl hover:delay-200 transition-all duration-500 hover:scale-110">
+                <div class="p-4">
+                    <div class="flex justify-between items-center mt-6">
+                         <p class="font-semibold text-2xl">Capital hill residence</p>
+                         <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="fill-red-500" d="M8 14C7.88969 14 7.77981 13.9617 7.69147 13.8847C7.00941 13.2909 6.36075 12.7404 5.75056 12.2227C2.30678 9.30098 0 7.3705 0 4.55821C0 1.95963 1.84491 0 4.25 0C6.14559 0 7.36234 1.31843 8 2.5056C8.63766 1.31843 9.85441 0 11.75 0C14.1551 0 16 1.95963 16 4.55821C16 7.37053 13.6932 9.30098 10.2494 12.2227C9.63925 12.7404 8.99059 13.2909 8.30853 13.8847C8.22019 13.9617 8.11031 14 8 14Z"/>
+                        </svg>                                                      
+                    </div>
+                    <div class="flex mt-2">
+                        <img src="Assets/Images/properties/geo.svg" alt="">
+                        <p class="text-text font-normal mx-2 text-lg">East London</p>
+                    </div>
+                    <div class="flex mt-4">
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/bed.svg')]">6</p>
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/eat.svg')]">2</p>
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/shower.svg')]">3</p>
+                    </div>
+                    <div class="flex justify-between mt-4 items-center">
+                        <p class="text-2xl text-orange-500 font-semibold">$<span>4327.00</span></p>
+                        <button class="my-4 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-4 py-2 hover:delay-200 transition-all duration-500 hover:bg-transparent hover:text-blue-500 font-medium text-lg">View Details</button>
+                    </div>
+                </div>
+            </div>
+            <div class="rounded-xl bg-white shadow-2xl overflow-hidden">
+                <img src="Assets/Images/properties/4.svg" alt="" class="w-full rounded-t-xl hover:delay-200 transition-all duration-500 hover:scale-110">
+                <div class="p-4">
+                    <div class="flex justify-between items-center mt-6">
+                         <p class="font-semibold text-2xl">Capital hill residence</p>
+                         <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="fill-red-500" d="M8 14C7.88969 14 7.77981 13.9617 7.69147 13.8847C7.00941 13.2909 6.36075 12.7404 5.75056 12.2227C2.30678 9.30098 0 7.3705 0 4.55821C0 1.95963 1.84491 0 4.25 0C6.14559 0 7.36234 1.31843 8 2.5056C8.63766 1.31843 9.85441 0 11.75 0C14.1551 0 16 1.95963 16 4.55821C16 7.37053 13.6932 9.30098 10.2494 12.2227C9.63925 12.7404 8.99059 13.2909 8.30853 13.8847C8.22019 13.9617 8.11031 14 8 14Z"/>
+                        </svg>                                                      
+                    </div>
+                    <div class="flex mt-2">
+                        <img src="Assets/Images/properties/geo.svg" alt="">
+                        <p class="text-text font-normal mx-2 text-lg">East London</p>
+                    </div>
+                    <div class="flex mt-4">
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/bed.svg')]">6</p>
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/eat.svg')]">2</p>
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/shower.svg')]">3</p>
+                    </div>
+                    <div class="flex justify-between mt-4 items-center">
+                        <p class="text-2xl text-orange-500 font-semibold">$<span>4427.00</span></p>
+                        <button class="my-4 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-4 py-2 hover:delay-200 transition-all duration-500 hover:bg-transparent hover:text-blue-500 font-medium text-lg">View Details</button>
+                    </div>
+                </div>
+            </div>
+            <div class="rounded-xl bg-white shadow-2xl overflow-hidden">
+                <img src="Assets/Images/properties/5.svg" alt="" class="w-full rounded-t-xl hover:delay-200 transition-all duration-500 hover:scale-110">
+                <div class="p-4">
+                    <div class="flex justify-between items-center mt-6">
+                         <p class="font-semibold text-2xl">Capital hill residence</p>
+                         <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="fill-red-500" d="M8 14C7.88969 14 7.77981 13.9617 7.69147 13.8847C7.00941 13.2909 6.36075 12.7404 5.75056 12.2227C2.30678 9.30098 0 7.3705 0 4.55821C0 1.95963 1.84491 0 4.25 0C6.14559 0 7.36234 1.31843 8 2.5056C8.63766 1.31843 9.85441 0 11.75 0C14.1551 0 16 1.95963 16 4.55821C16 7.37053 13.6932 9.30098 10.2494 12.2227C9.63925 12.7404 8.99059 13.2909 8.30853 13.8847C8.22019 13.9617 8.11031 14 8 14Z"/>
+                        </svg>                                                      
+                    </div>
+                    <div class="flex mt-2">
+                        <img src="Assets/Images/properties/geo.svg" alt="">
+                        <p class="text-text font-normal mx-2 text-lg">East London</p>
+                    </div>
+                    <div class="flex mt-4">
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/bed.svg')]">6</p>
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/eat.svg')]">2</p>
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/shower.svg')]">3</p>
+                    </div>
+                    <div class="flex justify-between mt-4 items-center">
+                        <p class="text-2xl text-orange-500 font-semibold">$<span>4527.00</span></p>
+                        <button class="my-4 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-4 py-2 hover:delay-200 transition-all duration-500 hover:bg-transparent hover:text-blue-500 font-medium text-lg">View Details</button>
+                    </div>
+                </div>
+            </div>
+            <div class="rounded-xl bg-white shadow-2xl overflow-hidden">
+                <img src="Assets/Images/properties/6.svg" alt="" class="w-full rounded-t-xl hover:delay-200 transition-all duration-500 hover:scale-110">
+                <div class="p-4">
+                    <div class="flex justify-between items-center mt-6">
+                         <p class="font-semibold text-2xl">Capital hill residence</p>
+                         <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="fill-red-500" d="M8 14C7.88969 14 7.77981 13.9617 7.69147 13.8847C7.00941 13.2909 6.36075 12.7404 5.75056 12.2227C2.30678 9.30098 0 7.3705 0 4.55821C0 1.95963 1.84491 0 4.25 0C6.14559 0 7.36234 1.31843 8 2.5056C8.63766 1.31843 9.85441 0 11.75 0C14.1551 0 16 1.95963 16 4.55821C16 7.37053 13.6932 9.30098 10.2494 12.2227C9.63925 12.7404 8.99059 13.2909 8.30853 13.8847C8.22019 13.9617 8.11031 14 8 14Z"/>
+                        </svg>                                                      
+                    </div>
+                    <div class="flex mt-2">
+                        <img src="Assets/Images/properties/geo.svg" alt="">
+                        <p class="text-text font-normal mx-2 text-lg">East London</p>
+                    </div>
+                    <div class="flex mt-4">
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/bed.svg')]">6</p>
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/eat.svg')]">2</p>
+                        <p class="font-normal text-lg before:mr-2 mr-2 before:content-[url('Assets/Images/properties/shower.svg')]">3</p>
+                    </div>
+                    <div class="flex justify-between mt-4 items-center">
+                        <p class="text-2xl text-orange-500 font-semibold">$<span>5527.00</span></p>
+                        <button class="my-4 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-4 py-2 hover:delay-200 transition-all duration-500 hover:bg-transparent hover:text-blue-500 font-medium text-lg">View Details</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="w-full bg-bgp">
+        <div class="container mx-auto p-2 mt-8 md:mt-14">
+
+        </div>
+    </div>
     <footer></footer>
     
     <script src="https://unpkg.com/flowbite@1.5.4/dist/flowbite.js"></script>
