--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
         </div>
         <div class="w-full lg:w-5/12 p-2 md:p-4 lg:p-0">
-            <img src="Assets/Images/find/bg.svg" alt="" class="w-full">
+            <img src="Assets/Images/find/bg.svg" alt="" class="w-full mt-4 md:mt-0">
         </div>
     </div>
 
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-    <div class="container mx-auto p-2 md:mt-32">
+    <div class="container mx-auto p-2 mt-12 md:mt-32">
         <div class="flex justify-between">
             <p class="font-semibold text-4xl text-text before:content-[url('Assets/Images/headings/house.svg')] before:absolute before:bottom-0 before:-left-2 relative w-fit">Popular Properties</p>
             <button class="text-orange-500 font-semibold">VIEW ALL</button>
@@ -123,7 +123,7 @@
                     <div class="flex justify-between items-center mt-6">
                          <p class="font-semibold text-2xl">Capital hill residence</p>
                          <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path class="fill-red-500" d="M8 14C7.88969 14 7.77981 13.9617 7.69147 13.8847C7.00941 13.2909 6.36075 12.7404 5.75056 12.2227C2.30678 9.30098 0 7.3705 0 4.55821C0 1.95963 1.84491 0 4.25 0C6.14559 0 7.36234 1.31843 8 2.5056C8.63766 1.31843 9.85441 0 11.75 0C14.1551 0 16 1.95963 16 4.55821C16 7.37053 13.6932 9.30098 10.2494 12.2227C9.63925 12.7404 8.99059 13.2909 8.30853 13.8847C8.22019 13.9617 8.11031 14 8 14Z"/>
+                            <path class="fill-gray-500" d="M8 14C7.88969 14 7.77981 13.9617 7.69147 13.8847C7.00941 13.2909 6.36075 12.7404 5.75056 12.2227C2.30678 9.30098 0 7.3705 0 4.55821C0 1.95963 1.84491 0 4.25 0C6.14559 0 7.36234 1.31843 8 2.5056C8.63766 1.31843 9.85441 0 11.75 0C14.1551 0 16 1.95963 16 4.55821C16 7.37053 13.6932 9.30098 10.2494 12.2227C9.63925 12.7404 8.99059 13.2909 8.30853 13.8847C8.22019 13.9617 8.11031 14 8 14Z"/>
                         </svg>                                                      
                     </div>
                     <div class="flex mt-2">
@@ -171,7 +171,7 @@
                     <div class="flex justify-between items-center mt-6">
                          <p class="font-semibold text-2xl">Capital hill residence</p>
                          <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path class="fill-red-500" d="M8 14C7.88969 14 7.77981 13.9617 7.69147 13.8847C7.00941 13.2909 6.36075 12.7404 5.75056 12.2227C2.30678 9.30098 0 7.3705 0 4.55821C0 1.95963 1.84491 0 4.25 0C6.14559 0 7.36234 1.31843 8 2.5056C8.63766 1.31843 9.85441 0 11.75 0C14.1551 0 16 1.95963 16 4.55821C16 7.37053 13.6932 9.30098 10.2494 12.2227C9.63925 12.7404 8.99059 13.2909 8.30853 13.8847C8.22019 13.9617 8.11031 14 8 14Z"/>
+                            <path class="fill-gray-500" d="M8 14C7.88969 14 7.77981 13.9617 7.69147 13.8847C7.00941 13.2909 6.36075 12.7404 5.75056 12.2227C2.30678 9.30098 0 7.3705 0 4.55821C0 1.95963 1.84491 0 4.25 0C6.14559 0 7.36234 1.31843 8 2.5056C8.63766 1.31843 9.85441 0 11.75 0C14.1551 0 16 1.95963 16 4.55821C16 7.37053 13.6932 9.30098 10.2494 12.2227C9.63925 12.7404 8.99059 13.2909 8.30853 13.8847C8.22019 13.9617 8.11031 14 8 14Z"/>
                         </svg>                                                      
                     </div>
                     <div class="flex mt-2">
@@ -219,7 +219,7 @@
                     <div class="flex justify-between items-center mt-6">
                          <p class="font-semibold text-2xl">Capital hill residence</p>
                          <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path class="fill-red-500" d="M8 14C7.88969 14 7.77981 13.9617 7.69147 13.8847C7.00941 13.2909 6.36075 12.7404 5.75056 12.2227C2.30678 9.30098 0 7.3705 0 4.55821C0 1.95963 1.84491 0 4.25 0C6.14559 0 7.36234 1.31843 8 2.5056C8.63766 1.31843 9.85441 0 11.75 0C14.1551 0 16 1.95963 16 4.55821C16 7.37053 13.6932 9.30098 10.2494 12.2227C9.63925 12.7404 8.99059 13.2909 8.30853 13.8847C8.22019 13.9617 8.11031 14 8 14Z"/>
+                            <path class="fill-gray-500" d="M8 14C7.88969 14 7.77981 13.9617 7.69147 13.8847C7.00941 13.2909 6.36075 12.7404 5.75056 12.2227C2.30678 9.30098 0 7.3705 0 4.55821C0 1.95963 1.84491 0 4.25 0C6.14559 0 7.36234 1.31843 8 2.5056C8.63766 1.31843 9.85441 0 11.75 0C14.1551 0 16 1.95963 16 4.55821C16 7.37053 13.6932 9.30098 10.2494 12.2227C9.63925 12.7404 8.99059 13.2909 8.30853 13.8847C8.22019 13.9617 8.11031 14 8 14Z"/>
                         </svg>                                                      
                     </div>
                     <div class="flex mt-2">
@@ -240,11 +240,65 @@
         </div>
     </div>
 
-    <div class="w-full bg-bgp">
-        <div class="container mx-auto p-2 mt-8 md:mt-14">
-
+    <div class="w-full bg-bgp mt-12 md:mt-32">
+        <div class="container mx-auto p-2 py-8 md:py-12">
+            <div class="flex flex-col justify-center items-center">
+                <p class="font-semibold text-4xl text-text before:content-[url('Assets/Images/headings/house.svg')] before:absolute before:bottom-0 before:-left-2 relative w-fit">Property Featured</p>
+                <p class="mt-2 text-lg md:w-1/2 text-center text-text">
+                    Real estate is a crowded field. But with the number of buyers purchasing homes through real estate agents and brokers growing there’s plenty of 
+                </p>
+            </div>
+            <div class="flex flex-col md:flex-row mt-12 md:mt-16 items-center justify-center">
+                <div class="flex flex-col md:mr-7 w-full md:w-1/3">
+                    <div class="flex flex-col bg-white p-4 rounded-xl">
+                        <img src="Assets/Images/featured/1.svg" alt="" class="w-12 h-12">
+                        <p class="font-semibold text-xl mt-4">100% Security</p>
+                        <p class="font-normal text-lg mt-3">For many of us, buying a home is a dre and one not easily attainable. </p>
+                    </div>
+                    <div class="flex flex-col bg-white p-4 rounded-xl mt-4">
+                        <img src="Assets/Images/featured/2.svg" alt="" class="w-12 h-12">
+                        <p class="font-semibold text-xl mt-4">Free air conditioner</p>
+                        <p class="font-normal text-lg mt-3">For many of us, buying a home is a dre and one not easily attainable. </p>
+                    </div>
+                    <div class="flex flex-col bg-white p-4 rounded-xl mt-4">
+                        <img src="Assets/Images/featured/3.svg" alt="" class="w-12 h-12">
+                        <p class="font-semibold text-xl mt-4">Flower garden</p>
+                        <p class="font-normal text-lg mt-3">For many of us, buying a home is a dre and one not easily attainable. </p>
+                    </div>
+                </div>
+                <img src="Assets/Images/featured/bg.svg" alt="" class="my-4 md:my-0 md:self-end h-full">
+                <div class="flex flex-col md:ml-7 w-full md:w-1/3">
+                    <div class="flex flex-col bg-white p-4 rounded-xl">
+                        <img src="Assets/Images/featured/4.svg" alt="" class="w-12 h-12">
+                        <p class="font-semibold text-xl mt-4">Parkers & movers</p>
+                        <p class="font-normal text-lg mt-3">For many of us, buying a home is a dre and one not easily attainable. </p>
+                    </div>
+                    <div class="flex flex-col bg-white p-4 rounded-xl mt-4">
+                        <img src="Assets/Images/featured/5.svg" alt="" class="w-12 h-12">
+                        <p class="font-semibold text-xl mt-4">Rental furniture</p>
+                        <p class="font-normal text-lg mt-3">For many of us, buying a home is a dre and one not easily attainable. </p>
+                    </div>
+                    <div class="flex flex-col bg-white p-4 rounded-xl mt-4">
+                        <img src="Assets/Images/featured/6.svg" alt="" class="w-12 h-12">
+                        <p class="font-semibold text-xl mt-4">Swimming pool</p>
+                        <p class="font-normal text-lg mt-3">For many of us, buying a home is a dre and one not easily attainable. </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
+    <div class="container mx-auto p-2 text-white">
+        <div class="rounded-xl bg-[url('Assets/Images/form/bg.svg')] bg-cover w-full h-full">
+            <p class="text-center font-medium pt-12 md:pt-16 text-4xl">Get listed your home as  a owner</p>
+            <p class="text-center font-normal pt-4 text-xl md:w-8/12 mx-auto">Here is a list of the greatest real estate company slogans of all-time. These catchy slogans are followed by the Greatest Real Estate.</p>
+            <form action="" class="relative flex items-center justify-center py-12 md:py-16 w-full md:w-8/12 mx-auto">
+                <input type="text" class="py-4 px-4 text-black rounded-lg w-full" placeholder="Enter email address">
+                <button class="ml-6 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-4 py-2 hover:delay-200 transition-all duration-500 hover:bg-transparent hover:text-blue-500 absolute right-2">Contact us</button>
+            </form>
+        </div>
+    </div>
+
     <footer></footer>
     
     <script src="https://unpkg.com/flowbite@1.5.4/dist/flowbite.js"></script>
