--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="Assets/CSS/custom.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <title>Главная</title>
 </head>
 <body class="bg-white">
@@ -79,11 +80,11 @@
     <div class="container mx-auto p-2 mt-12 md:mt-24 flex flex-col justify-center items-center">
         <p class="font-semibold text-4xl text-text before:content-[url('Assets/Images/headings/house.svg')] before:absolute before:bottom-0 before:-left-2 text-center relative w-fit">Our Partners</p>
         <div class="flex flex-col lg:flex-row mt-6 md:mt-16 justify-center items-center">
-            <img src="Assets/Images/partners/1.svg" alt="" class="my-6 lg:mx-12">
-            <img src="Assets/Images/partners/2.svg" alt="" class="my-6 lg:mx-12">
-            <img src="Assets/Images/partners/3.svg" alt="" class="my-6 lg:mx-12">
-            <img src="Assets/Images/partners/4.svg" alt="" class="my-6 lg:mx-12">
-            <img src="Assets/Images/partners/5.svg" alt="" class="my-6 lg:mx-12">            
+            <img src="Assets/Images/partners/1.svg" alt="" class="my-6 lg:mx-8 xl:mx-12">
+            <img src="Assets/Images/partners/2.svg" alt="" class="my-6 lg:mx-8 xl:mx-12">
+            <img src="Assets/Images/partners/3.svg" alt="" class="my-6 lg:mx-8 xl:mx-12">
+            <img src="Assets/Images/partners/4.svg" alt="" class="my-6 lg:mx-8 xl:mx-12">
+            <img src="Assets/Images/partners/5.svg" alt="" class="my-6 lg:mx-8 xl:mx-12">            
         </div>
     </div>
 
@@ -288,7 +289,90 @@
         </div>
     </div>
 
-    <div class="container mx-auto p-2 text-white">
+    <div class="container mx-auto p-2">
+        <p class="font-semibold mt-12 md:mt-24 text-orange-500 text-center">REVIEWS</p>
+        <p class="mx-auto font-semibold text-4xl text-text before:content-[url('Assets/Images/headings/house.svg')] before:absolute before:bottom-0 before:-left-2 relative w-fit mt-2">Customer says</p>
+        <div class="mt-12 md:mt-24">
+            <div class="swiper w-full h-96">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                  <!-- Slides -->
+                  <div class="swiper-slide flex flex-col border-2 border-orange-50 rounded-xl p-4 relative h-fit">
+                    <div class="flex justify-between">
+                        <div class="flex items-center">
+                            <img src="Assets/Images/swiper/1.svg" alt="">
+                            <div class="flex flex-col mx-4 md:mx-7">
+                                <p class="font-semibold text-xl">Justin Lee</p>
+                                <p class="font-normal mt-1">Products Designer at Ito</p>
+                            </div>
+                        </div>
+                        <img src="Assets/Images/swiper/bg.svg" alt="" class="w-16 h-16 absolute right-7">
+                    </div>
+                    <p class="my-4 md:my-7">
+                        A good real estate agent doesn’t disappear once the closing IN signed.
+                        Buying a bigger home doesn’t necessarily mean spendi more money.Been there.
+                        Done that. Sold. Bought Bringing It All Together.
+                    </p>
+                  </div>
+                  <div class="swiper-slide flex flex-col border-2 border-orange-50 rounded-xl p-4 relative h-fit">
+                    <div class="flex justify-between">
+                        <div class="flex items-center">
+                            <img src="Assets/Images/swiper/2.svg" alt="">
+                            <div class="flex flex-col mx-4 md:mx-7">
+                                <p class="font-semibold text-xl">Angel Cathe</p>
+                                <p class="font-normal mt-1">Products Designer at Ito</p>
+                            </div>
+                        </div>
+                        <img src="Assets/Images/swiper/bg.svg" alt="" class="w-16 h-16 absolute right-7">
+                    </div>
+                    <p class="my-4 md:my-7">
+                        A good real estate agent doesn’t disappear once the closing IN signed.
+                        Buying a bigger home doesn’t necessarily mean spendi more money.Been there.
+                        Done that. Sold. Bought Bringing It All Together.
+                    </p>
+                  </div>
+                  <div class="swiper-slide flex flex-col border-2 border-orange-50 rounded-xl p-4 relative h-fit">
+                    <div class="flex justify-between">
+                        <div class="flex items-center">
+                            <img src="Assets/Images/swiper/1.svg" alt="">
+                            <div class="flex flex-col mx-4 md:mx-7">
+                                <p class="font-semibold text-xl">Justin Lee</p>
+                                <p class="font-normal mt-1">Products Designer at Ito</p>
+                            </div>
+                        </div>
+                        <img src="Assets/Images/swiper/bg.svg" alt="" class="w-16 h-16 absolute right-7">
+                    </div>
+                    <p class="my-4 md:my-7">
+                        A good real estate agent doesn’t disappear once the closing IN signed.
+                        Buying a bigger home doesn’t necessarily mean spendi more money.Been there.
+                        Done that. Sold. Bought Bringing It All Together.
+                    </p>
+                  </div>
+                  <div class="swiper-slide flex flex-col border-2 border-orange-50 rounded-xl p-4 relative h-fit">
+                    <div class="flex justify-between">
+                        <div class="flex items-center">
+                            <img src="Assets/Images/swiper/2.svg" alt="">
+                            <div class="flex flex-col mx-4 md:mx-7">
+                                <p class="font-semibold text-xl">Angel Cathe</p>
+                                <p class="font-normal mt-1">Products Designer at Ito</p>
+                            </div>
+                        </div>
+                        <img src="Assets/Images/swiper/bg.svg" alt="" class="w-16 h-16 absolute right-7">
+                    </div>
+                    <p class="my-4 md:my-7">
+                        A good real estate agent doesn’t disappear once the closing IN signed.
+                        Buying a bigger home doesn’t necessarily mean spendi more money.Been there.
+                        Done that. Sold. Bought Bringing It All Together.
+                    </p>
+                  </div>
+                </div>
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>              
+            </div>
+        </div>
+    </div>
+
+    <div class="container mx-auto p-2 text-white mt-12 md:mt-24">
         <div class="rounded-xl bg-[url('Assets/Images/form/bg.svg')] bg-cover w-full h-full">
             <p class="text-center font-medium pt-12 md:pt-16 text-4xl">Get listed your home as  a owner</p>
             <p class="text-center font-normal pt-4 text-xl md:w-8/12 mx-auto">Here is a list of the greatest real estate company slogans of all-time. These catchy slogans are followed by the Greatest Real Estate.</p>
@@ -299,11 +383,46 @@
         </div>
     </div>
 
-    <footer></footer>
+    <footer class="container mx-auto p-2 my-12 md:my-24 grid grid-cols-1 md:grid-cols-4 gap-4 text-text md:justify-items-center">
+        <div class="order-last md:order-first">
+            <img src="Assets/Images/footer/logo.svg" alt="" class="w-48">
+            <p class="font-normal my-4">Contrary to popular  is not simply random text. It has </p>
+            <div class="flex">
+                <img src="Assets/Images/social/1.svg" alt="" class="mr-2">
+                <img src="Assets/Images/social/2.svg" alt="" class="mx-2">
+                <img src="Assets/Images/social/3.svg" alt="" class="mx-2">
+                <img src="Assets/Images/social/4.svg" alt="" class="mx-2">
+                <img src="Assets/Images/social/5.svg" alt="" class="mx-2">                
+            </div>
+        </div>
+        <div>
+            <p class="text-xl font-semibold mb-2">About</p>
+            <p class="mt-4">Company</p>
+            <p class="mt-4">Team</p>
+            <p class="mt-4">Career</p>
+            <p class="mt-4">Blogs</p>
+        </div>
+        <div>
+            <p class="text-xl font-semibold mb-2">Products</p>
+            <p class="mt-4">E-Books</p>
+            <p class="mt-4">Preasantation</p>
+            <p class="mt-4">Management</p>
+            <p class="mt-4">Dashboard</p>
+        </div>
+        <div>
+            <p class="text-xl font-semibold mb-2">Address</p>
+            <p class="mt-4">Country Delevery</p>
+            <p class="mt-4">Counter Beach Post</p>
+            <p class="mt-4">www.itobd.com</p>
+            <p class="mt-4">+880176565655</p>
+        </div>
+    </footer>
     
     <script src="https://unpkg.com/flowbite@1.5.4/dist/flowbite.js"></script>
     <script src="Assets/JS/tailwind.config.js"></script>
     <script src="Assets/JS/custom.js"></script>
     <script src="Assets/JS/tabs.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="Assets/JS/swiper.js"></script>
 </body>
 </html>
