--- a/index.html
+++ b/index.html
@@ -376,18 +376,18 @@
         <div class="rounded-xl bg-[url('Assets/Images/form/bg.svg')] bg-cover w-full h-full">
             <p class="text-center font-medium pt-12 md:pt-16 text-4xl">Get listed your home as  a owner</p>
             <p class="text-center font-normal pt-4 text-xl md:w-8/12 mx-auto">Here is a list of the greatest real estate company slogans of all-time. These catchy slogans are followed by the Greatest Real Estate.</p>
-            <form action="" class="relative flex items-center justify-center py-12 md:py-16 w-full md:w-8/12 mx-auto">
+            <form action="" class="relative flex items-center justify-center py-12 md:py-16 w-full md:w-8/12 mx-auto p-2">
                 <input type="text" class="py-4 px-4 text-black rounded-lg w-full" placeholder="Enter email address">
-                <button class="ml-6 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-4 py-2 hover:delay-200 transition-all duration-500 hover:bg-transparent hover:text-blue-500 absolute right-2">Contact us</button>
+                <button class="ml-6 text-white bg-blue-500 border-2 border-blue-500 rounded-lg px-4 py-2 hover:delay-200 transition-all duration-500 hover:bg-transparent hover:text-blue-500 absolute right-4">Contact us</button>
             </form>
         </div>
     </div>
 
     <footer class="container mx-auto p-2 my-12 md:my-24 grid grid-cols-1 md:grid-cols-4 gap-4 text-text md:justify-items-center">
-        <div class="order-last md:order-first">
+        <div class="flex flex-col items-center md:items-start">
             <img src="Assets/Images/footer/logo.svg" alt="" class="w-48">
             <p class="font-normal my-4">Contrary to popular  is not simply random text. It has </p>
-            <div class="flex">
+            <div class="flex hidden md:flex">
                 <img src="Assets/Images/social/1.svg" alt="" class="mr-2">
                 <img src="Assets/Images/social/2.svg" alt="" class="mx-2">
                 <img src="Assets/Images/social/3.svg" alt="" class="mx-2">
@@ -415,6 +415,13 @@
             <p class="mt-4">Counter Beach Post</p>
             <p class="mt-4">www.itobd.com</p>
             <p class="mt-4">+880176565655</p>
+            <div class="flex md:hidden mt-4 mx-auto w-fit">
+                <img src="Assets/Images/social/1.svg" alt="" class="mr-2">
+                <img src="Assets/Images/social/2.svg" alt="" class="mx-2">
+                <img src="Assets/Images/social/3.svg" alt="" class="mx-2">
+                <img src="Assets/Images/social/4.svg" alt="" class="mx-2">
+                <img src="Assets/Images/social/5.svg" alt="" class="mx-2">                
+            </div>
         </div>
     </footer>
     
