--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                 </div>
                 <div id="tabContentExample" class="tab-shadow">
                     <div class="hidden p-4 bg-white rounded-lg" id="buy-example" role="tabpanel" aria-labelledby="buy-tab-example">
-                        <p>Тест 1</p>
+                        <p class="font-semibold">Блок 1</p>
                     </div>
                     <div class="hidden p-4 bg-white rounded-lg" id="rent-example" role="tabpanel" aria-labelledby="rent-tab-example">
-                        <p>Тест 2</p>
+                        <p class="font-semibold">Блок 2</p>
                     </div>
                     <div class="hidden p-4 bg-white rounded-lg" id="sell-example" role="tabpanel" aria-labelledby="sell-tab-example">
-                        <p>Тест 3</p>
+                        <p class="font-semibold">Блок 3</p>
                     </div>
                 </div>
             </div>
